# src/routes/requestApplicantRoutes.js
@@ -12,6 +12,10 @@ router.put('/', requestApplicantController.createRequestApplicant);
  */
 router.post('/all', requestApplicantController.getAllRequestApplicants);
 /**
+ * 특정 사용자가 지원한 의뢰 정보 조회
+ */
+router.post('/applyRequest', requestApplicantController.getFetchRequestInfosByUser);
+/**
  * 의뢰지원자 정보 수정
  */
 router.post('/update', requestApplicantController.updateRequestApplicant);
