# src/swagger-output.json
@@ -1283,6 +1283,36 @@
         }
       }
     },
+    "/api/requestApplicant/applyRequest": {
+      "post": {
+        "tags": [
+          "requestApplicant - 의뢰 지원자 정보 테이블"
+        ],
+        "description": "의뢰 지원자 정보 전체 조회",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "user_idx": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "성공"
+          },
+          "500": {
+            "description": "내부 서버 오류"
+          }
+        }
+      }
+    },
     "/api/requestApplicant/update": {
       "post": {
         "tags": [
